--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript">
         new Cmd({
             selector: 'cmd1',
-            old: 1,
+            old: 1
         });
     </script>
 
