Добавлен список портфолии, временно убрано плавная печать текста, добавлен шрифт ubuntu

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
     <script type="text/javascript">
         new Cmd({
-            selector: 'cmd1',
-            old: 1
+            selector: 'cmd1'
         });
     </script>
 
