--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Портфолио</title>
-        <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+        <link rel="stylesheet" type="text/css" href="/assets/css/style.css?v=0.1">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
 
     <div id="cmd1"></div>
 
-    <script type="text/javascript" src="/assets/js/cmd.js"></script>
+    <script type="text/javascript" src="/assets/js/cmd.js?v=0.1"></script>
 
     <script type="text/javascript">
         new Cmd({
